--- a/v2/journal/senior-guidelines.html
+++ b/v2/journal/senior-guidelines.html
@@ -1,6 +1,6 @@
 <html> 
 <head>
-<title>Journal : Defining Design Principles | Peter Roper Product Designer</title>
+<title>Journal : Senior User Guidelines | Peter Roper Product Designer</title>
 <meta name="viewport" content="width=device-width,	 initial-scale=1.0">
 <meta http-equiv="content-Type" content="text/html; charset=utf-8">
 <meta name="robots" content="noindex, nofollow" />
@@ -60,99 +60,25 @@
     <div class="body">
     
     <div id="intro" class="section">
-        <h2>Defining Design Principles<br /> and Guidelines for the Tsukasapo app</h2>
+        <h2>A guide to usability guidelines for senior and low literacy users</h2>
         <div class="column-container col1">
             <div class="column">
-                <p>Key data from KPIs and user research showed that the initial user experience (provisioning and key action) and user comprehension of the tsukasapo needed re-evaluation.</p> 
-                <p>I had been part of the evolution of a design system for the app, which encompassed style values, components and guidelines for their application. However, there was an absence of documentation concerning the original design decisions and the reasoning behind them, leaving the team without well-defined criteria for potential redesigns.</p>
-                <h3>Introducing Design Principles</h3>
-                <p>To solve this, I wanted to define user centered design principles, rules, and guidelines. This would help bridge the gap between concept designs and make it easier for stakeholders to identify the issues and critique proposals.</p>
-                <p>I present the idea for broader discussion to both the UX and PM teams which led me to create and facilitate the following presentation and workshop:</p>
+                <h3>title</h3>
+                <p>description</p>
             </div>
             <div class="column"></div>
         </div>
-    </div>
-    <div class="section">
         <div class="column-container col1">
             <div class="column">
-                <h3>Presentation : Introducing principles and guidelines</h3>
-                <p>I began by giving a simple introduction to core design principles such as accessibility, simplicity and consistency and then broke a few down into guidelines and subsequent rules which were easy for stakeholders to relate to.</p>
-                <p>I then framed this with the guidelines I often follow which could be found in ‘don’t make me think’ - such as call to actions, scanability and visual hierachy.</p>
-                <div class="gallery-container">
-                    <div class="gallery sm">
-                        <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/presentation1.png);" ></span></span>
-                        <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/presentation2.png);" ></span></span>
-                        <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/presentation3.png);" ></span></span>
-                        <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/presentation4.png);" ></span></span>
-                </div>
-                <h3>Workshop Part 1</h3>
-                <p>The first 1.5 hour workshop was a warm up to get participants focussed on user centered thinking which we began by on deconstructing 2 contrasting UI styles and then moved on to outline the user needs of our own app.</p>
-                <p><b>Steps</b></p>
-                <ul>
-                    <li>defining rules and guidelines for easy device smartphone UI which are commonly used by our users.</li>
-                    <li>defining rules and guidelines for apple music.</li>
-                    <li>defining guidelines and rules which meet our users needs.</li>
-                </ul>
-                <p><b>Goal</b></p>
-                <p>By introducing UI which our users often use and contrasting it with more contemporary UI I hoped to remove personal bias when discussing our own user needs.</p>
-                <h3>Workshop Part 2</h3>
-                <p>The final 1 hour workshop was taken a week later and focussed on defining guidelines based on the user needs outlined in the first workshop.</p>
-                <p>The first 30 minutes saw small groups working together to outline guidelines and rules, after this we came together to sort the results into similiar areas and then rank them in terms of importance.</p>
-                <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/workshop1.png);" ></span>    
-                <h3>Follow Up</h3>
-                <p>text</p>
+                <h3>title</h3>
+                <p>description</p>
             </div>
             <div class="column"></div>
         </div>
-    </div>
-     <div class="section">
         <div class="column-container col1">
             <div class="column">
-                <h3>Insights</h3>
-                <p>While working on the task, I found it practical to divide the guidelines into usability and visual design categories. Creating usability guidelines was straightforward since we have many common requirements. But our main challenge was to consider users with low literacy levels empathetically.</p>
-                <h5>Examples of usability guidelines for senior and low literacy users</h5>
-                <ol>
-                    <li>
-                        <p><b>Clear and Simple Language:</b></p>
-                        <p>Use plain, straightforward language with short sentences and common words. Avoid jargon or complex terminology.</p>
-                        <p><b>Why it's important:</b> Low literacy and senior users may struggle with comprehension, so using clear and simple language ensures that they can easily understand the content and instructions within the app.</p>
-                    </li>
-                    <li>
-                        <p><b>Larger Text and Clear Fonts:</b></p>
-                        <p>Choose a legible font with a clear typeface and make sure the text is of an adequate size for easy reading.</p>
-                        <p><b>Why it's important:</b> Seniors often experience age-related vision changes, so larger, easily readable text and fonts are essential to prevent eye strain and enhance readability.</p>
-                    </li>
-                    <li>
-                        <p><b>Readable Contrasting Colors:</b></p>
-                        <p>Ensure a high contrast between text and background colors to improve readability.</p>
-                        <p><b>Why it's important:</b> High contrast enhances visibility, making it easier for users with reduced vision capabilities to read content and interact with the app without confusion.</p>
-                    </li>
-                </ol>
-                <ol>
-                    <li><a href="senior-guidelines.html">A guide to usability guidelines for senior and low literacy users</a></li>
-                </ol>
-                <h5>Visual design principles and choosing a layout pattern</h5>
-                <p>Visual design guidelines had some subjectivity as participants had different app usage and personal preferences. Designers also had their own likes, such as minimalism, focusing on the first screen view, or favoring card-based designs.</p>
-                <p>On the other hand, usability guidelines played a key role in helping us decide on layout patterns. By looking at the usability guidelines as a whole, it became more straightforward to pick the right layout.</p>
-                <p>We also realized that we could use different layout styles for specific page types within the app.</p>
-                <ol>
-                    <li><a href="layout-patterns.html">Exploring Layout Patterns: Tailoring Them to Diverse Screen Situations</a></li>
-                </ol>
-
-                <h3>Summary</h3>
-                <ol>
-                    <li>The process brought design and product management teams closer and opened up ongoing discussions which allowed the design team to introduce design proposals for product backlog consideration.</li>
-                    <li>The client could understand design reasoning more clearly which enabled a wider variety of user centered design improvements to be made which previously would have been rejected.</li>
-                    <li>The design system became more of a team initiative which helped speed up its evolution and influence on team members.</li>
-                </ol>
-
-                <h3>What I learnt</h3>
-                <ul>
-                    <li>Documentation of design decisions aren’t often ground breaking but without this information at hand it can create uncertainty and a lack of clear direction.</li>
-                    <li>Guidelines should be product-specific and grounded in user personas and research, rather than individual designer preferences.</li>
-                    <li>Introducing new principles can be challenging due to the need to maintain design consistency, however innovation can be measuring in controlled situations such as A/B testing, quantitative research or usability testing and should be weighed against the need for continuity.</li>
-                    <li>While it’s a good practice to set principles during the initial product definition phase, it’s also okay to create or adjust them whenever necessary, especially based on user feedback and insights.</li>
-                </ul>
+                <h3>title</h3>
+                <p>description</p>
             </div>
             <div class="column"></div>
         </div>
