--- a/v2/journal/design-principles.html
+++ b/v2/journal/design-principles.html
@@ -80,10 +80,11 @@
                 <p>I then framed this with the guidelines I often follow which could be found in ‘don’t make me think’ - such as call to actions, scanability and visual hierachy.</p>
                 <div class="gallery-container">
                     <div class="gallery sm">
-                        <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/presentation1.png);" ></span></span>
-                        <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/presentation2.png);" ></span></span>
-                        <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/presentation3.png);" ></span></span>
-                        <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/presentation4.png);" ></span></span>
+                        <span class="wrap"><span class="img sm" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/presentation1.png);" ></span></span>
+                        <span class="wrap"><span class="img sm" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/presentation2.png);" ></span></span>
+                        <span class="wrap"><span class="img sm" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/presentation3.png);" ></span></span>
+                        <span class="wrap"><span class="img sm" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/presentation4.png);" ></span></span>
+                    </div>
                 </div>
                 <h3>Workshop Part 1</h3>
                 <p>The first 1.5 hour workshop was a warm up to get participants focussed on user centered thinking which we began by on deconstructing 2 contrasting UI styles and then moved on to outline the user needs of our own app.</p>
@@ -98,9 +99,9 @@
                 <h3>Workshop Part 2</h3>
                 <p>The final 1 hour workshop was taken a week later and focussed on defining guidelines based on the user needs outlined in the first workshop.</p>
                 <p>The first 30 minutes saw small groups working together to outline guidelines and rules, after this we came together to sort the results into similiar areas and then rank them in terms of importance.</p>
-                <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/workshop1.png);" ></span>    
+                <span class="img sm" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/workshop1.png);" ></span>    
                 <h3>Follow Up</h3>
-                <p>text</p>
+                <p>After the workshop, the UX team collaborated to create clear guideline documents. These were then included in the design system, along with a review checklist. The UX team and project managers kept discussing various aspects, delving deeper into competitive analysis tasks.</p>
             </div>
             <div class="column"></div>
         </div>
