--- a/v2/journal/senior-guidelines.html
+++ b/v2/journal/senior-guidelines.html
@@ -63,22 +63,90 @@
         <h2>A guide to usability guidelines for senior and low literacy users</h2>
         <div class="column-container col1">
             <div class="column">
-                <h3>title</h3>
-                <p>description</p>
-            </div>
-            <div class="column"></div>
-        </div>
-        <div class="column-container col1">
-            <div class="column">
-                <h3>title</h3>
-                <p>description</p>
-            </div>
-            <div class="column"></div>
-        </div>
-        <div class="column-container col1">
-            <div class="column">
-                <h3>title</h3>
-                <p>description</p>
+                <p>Usability guidelines and rules for low literacy and senior users should prioritize simplicity, clarity, and ease of use. Here are some guidelines:</p>
+                <ol>
+                    <li>
+                        <h5>Clear and Simple Language:</h5>
+                        <ul>
+                            <li>Use plain language and avoid jargon or technical terms.</li>
+                            <li>Keep sentences short and to the point.</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h5>Large and Readable Text:</h5>
+                        <ul>
+                            <li>Use a legible font with a size that's easy to read.</li>
+                            <li>Ensure a high contrast between text and background.</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h5>Intuitive Navigation:</h5>
+                        <ul>
+                            <li>Keep navigation straightforward and predictable.</li>
+                            <li>Use clear, simple icons and labels for buttons and menus.</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h5>Consistent Layout:</h5>
+                        <ul>
+                            <li>Maintain a consistent layout and design throughout the app.</li>
+                            <li>Place important functions in easily accessible and familiar locations.</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h5>Visual Cues:</h5>
+                        <ul>
+                            <li>Use visual cues such as arrows or highlighting to guide users through tasks.</li>
+                            <li>Make it clear what actions are available and how to perform them.</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h5>User-Friendly Forms:</h5>
+                        <ul>
+                            <li>Minimize the number of form fields and use clear labels.</li>
+                            <li>Provide help text or tooltips where needed.</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h5>Adequate Feedback:</h5>
+                        <ul>
+                            <li>Offer clear feedback for user actions, such as button clicks or form submissions.</li>
+                            <li>Use plain language error messages and provide guidance on how to correct mistakes.</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h5>Progressive Disclosure:</h5>
+                        <ul>
+                            <li>Present information and features in a step-by-step manner, revealing complexity as users become more familiar with the app.</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h5>Assistive Technologies:</h5>
+                        <ul>
+                            <li>Ensure compatibility with screen readers and other assistive technologies.</li>
+                            <li>Provide text alternatives for non-text content.</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h5>Test with the Target Audience:</h5>
+                        <ul>
+                            <li>Regularly conduct usability testing with low literacy and senior users to identify and address issues.</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h5>Easily Accessible Help:</h5>
+                        <ul>
+                            <li>Include a straightforward help section or a prominent "Need Help?" option.</li>
+                            <li>Offer easily understandable instructions and tutorials.</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h5>Customization Options:</h5>
+                        <ul>
+                            <li>Allow users to adjust settings and preferences to tailor the app to their individual needs and abilities.</li>
+                        </ul>
+                    </li>
+                </ol>
             </div>
             <div class="column"></div>
         </div>
