--- a/v2/index.html
+++ b/v2/index.html
@@ -146,7 +146,7 @@
                 </div>
             </div>
             <div id="design-system" class="article journal">
-              <h3 class="title">Design System : Applying Primitives & Design Tokens</h3>
+              <h3 class="title">Design System : Migrating from Figma Styles to Primitive and Token Variables</h3>
               <p class="description">The following outlines the steps I took to implement figma's latest changes to a projects design system.</p>
               <p><a href="journal/design-system.html">Read the Journal</a></p>
               <span class="img"></span>
