--- a/v2/journal/design-system.html
+++ b/v2/journal/design-system.html
@@ -61,7 +61,7 @@
     
     <div id="intro" class="section">
         <h2>Design System : Migrating from Figma Styles<br /> to Primitive and Token Variables</h2>
-        <span class="img xs"></span>
+        <span class="img xs" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/kv-design-system.png);"></span>
         <div class="column-container col1">
             <div class="column">  
                 <p>Past experience as a Front End Developer had seen me integrate a comprehensive SCSS library so I was pleased to see Figma release the design variables feature.</p>
