--- a/v2/journal/userflow-repository.html
+++ b/v2/journal/userflow-repository.html
@@ -91,6 +91,17 @@
                     <h3>Streamlining User Flow Updates: The Power of Automation</h3>
                     <p>When I initially joined my current team, I was eager to make a positive impact. I noticed that the regular sprint user flow underwent frequent updates, often necessitating extensive manual adjustments for pixel precision and alignment. To streamline this process, I embarked on an initiative to introduce automation through auto layout techniques. I synchronized each screen using Figma's library and sync feature. While this automation introduced some complexity and required a bit of a learning curve for other team members when making edits, it didn't take long for them to appreciate the significant functionality and time-saving benefits it brought. </p>
                     <p>Over the course of a year, the screen repository has evolved into a valuable resource, enabling us to track changes efficiently and maintain a consistency in our work.</p>
+                    <div class="gallery-container">
+                        <div class="gallery">
+                            <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/repository1.png);" ></span></span>
+                            <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/repository2.png);" ></span></span>
+                            <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/repository3.png);" ></span></span>
+                            <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/repository4.png);" ></span></span>
+                            <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/repository5.png);" ></span></span>
+                            <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/repository6.png);" ></span></span>
+                            <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/repository7.png);" ></span></span>
+                        </div>
+                    </div>
                 </div>
                 <div class="column"></div>
             </div>
