--- a/v2/about/designer-developer.html
+++ b/v2/about/designer-developer.html
@@ -63,25 +63,12 @@
         <div class="column-container col1 segment">
             <div class="column">
             <h2>Working as a Designer and Developer</h2>
-            <p>From 2006 to 2016, I held a dual role as a designer and front-end developer at a bookings organization that operated in the UK, AU, and US markets. During my decade-long tenure, I led the design of a comprehensive product family comprising over 20 brands and 500+ websites and apps, spanning various platforms such as B2B and B2C websites, web, and native apps, as well as social media integration, admin tools, and email and print media.</p>
-            <h3>A passion for Product Ownership</h3>
-            <p>I developed trust within the team, fostering a strong sense of product ownership, design vision, refinement, and future planning. These skills remain essential in my current role, where I advocate for integrating design thinking and a user-first approach into our product strategy.</p>
-            </div>
-            <div class="column"></div>
-        </div>
-        <div class="column-container col1 segment">
-            <div class="column">
-            <h3>A dynamic iterative process</h3>
-            <p>The product team adhered to an agile approach, prioritizing the principles of thinking expansively, swift responsiveness, and frequent releases. I actively participated in every stage of the process, spanning from planning and discovery to design, front-end and back-end implementation, and QA testing. Regular design iterations were a staple, with feedback being synthesized from both Google Analytics data and insights gathered from user research among our customer base.</p>
-            <p>What I appreciated most was the team's dedication to ongoing product improvement. Once a new iteration or feature was released, plans for its enhancement were already in progress, aligning with user behavior analysis.</p>
-            </div>
-            <div class="column"></div>
-        </div>
-        <div id="skills" class="column-container  segment col1">
-            <div class="column">
-            <h3>A Decade of Skill Cultivation</h3>
-            <p>Over time, I cultivated a product design skill set including a variety of design profficiencies, front-end development, CSS, HTML, and JavaScript. Challenges, often requiring deep dives on platforms like Stack Overflow, have enriched my knowledge. This knowledge serves as a valuable resource, informing my interactions across departments. Frequent encounters with recurring tasks allowed me to refine approaches. Juggling multiple responsibilities prompted workflow streamlining and risk mitigation, facilitating seamless collaboration with colleagues in engineering, product management, and design.</p>
-
+            <p>During the first 8 years of my career, I switched between web design, front-end development, and UI design roles. While my focus was mostly on the creative side, I also had to learn how to build products, which pushed me to develop a systematic way of thinking to complement my creativity.</p>
+            <h3>A unique learning experience</h3>
+            <p>This dual role gave me a lot of experiences and challenges as the industry evolved. I dealt with everything from table-based layouts and the introduction of CSS to the frustrations of IE6, as well as responsive design, MySQL, JS, SEO, and mobile-first design. My design skills also broadened during this time to include a wide range of product and visual design skills, as I was the lead designer within the organization.</p>
+            <h3>How it informs my role today</h3>
+            <p>As the complexity of tech stacks began to surpass my grasp around 2014, I made a conscious shift towards concentrating on Product design roles. Despite this transition, the experiences from my earlier career still enable me to bridge the gap between design teams, product managers, and engineers, fostering effective collaboration and understanding.</p>
+            <p>While rare I also have been known to step in and help with html, css tasks for projects if engineering resources are stretched.</p>
             <h4>Core Aquired Skills</h4>
             <ul>
                 <li>Product Ownership</li>
@@ -92,13 +79,6 @@
                 <li>Agile Sprints</li>
                 <li>Analytics</li>
             </ul>
-            </div>
-        </div>
-        <div class="column-container segment col1">  
-            <div class="column"> 
-            <h3>Take aways from this period</h3>
-            <p>I was able to work dynamically as part of a team and be at the fore of a culture of continuous improvement. At times we cut corners on QA and measuring data affectively. However this period of my career showed me what hard work can produce when a team gets to work.</p>
-            <p>While I value the processes and decision making steps I have learnt later in my career, I still continue to move the needle and see if we can do just a little bit more.</p>
             <ol>
                 <li><a href="designer-asurion.html">Senior UX Designer with Asurion</a></li>
             </ol>
